Use structured address data

--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -61,9 +61,9 @@
             html: "Building and street <span class=\"govuk-visually-hidden\">line 1 of 2</span>"
           },
           autocomplete: "address-line1",
-          id: "building-and-street",
-          name: "building-and-street",
-          value: data["building-and-street"]
+          id: "address-line1",
+          name: "address-line1",
+          value: data["address-line1"]
         }) }}
 
         {{ govukInput({
@@ -71,9 +71,9 @@
             html: "<span class=\"govuk-visually-hidden\">Building and street line 2 of 2</span>"
           },
           autocomplete: "address-line2",
-          id: "building-and-street-2",
-          name: "building-and-street-2",
-          value: data["building-and-street-2"]
+          id: "address-line2",
+          name: "address-line2",
+          value: data["address-line2"]
         }) }}
 
         {{ govukInput({
@@ -82,9 +82,9 @@
           },
           classes: "govuk-!-width-two-thirds",
           autocomplete: "address-level2",
-          id: "town-or-city",
-          name: "town-or-city",
-          value: data["town-or-city"]
+          id: "address-level2",
+          name: "address-level2",
+          value: data["address-level2"]
         }) }}
 
         {{ govukInput({
@@ -93,9 +93,9 @@
           },
           classes: "govuk-!-width-two-thirds",
           autocomplete: "address-level1",
-          id: "county",
-          name: "county",
-          value: data["county"]
+          id: "address-level1",
+          name: "address-level1",
+          value: data["address-level1"]
         }) }}
 
         {{ govukInput({
@@ -104,9 +104,9 @@
           },
           classes: "govuk-input--width-10",
           autocomplete: "postal-code",
-          id: "postcode",
-          name: "postcode",
-          value: data["postcode"]
+          id: "postal-code",
+          name: "postal-code",
+          value: data["postal-code"]
         }) }}
 
         <p class="govuk-body">Changes will appear on Find postgraduate teacher training within 2 hours.</p>
