--- a/app/views/about-your-organisation/visa-sponsorship.html
+++ b/app/views/about-your-organisation/visa-sponsorship.html
@@ -39,7 +39,7 @@
         name: skilledWorkerVisaRadioName,
         fieldset: {
           legend: {
-            text: "Can you sponsor Skilled worker visas?",
+            text: "Can you sponsor Skilled Worker visas?",
             classes: "govuk-fieldset__legend--m"
           }
         },
