--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -318,7 +318,7 @@
 
         <p class="govuk-body">
           {% if courseType === "Salaried" and data["canSponsorSkilledWorkerVisa"] == "true" %}
-            We can <a href="https://www.gov.uk/government/publications/train-to-teach-in-england-non-uk-applicants/train-to-teach-in-england-non-uk-applicants#visas-and-immigration">sponsor Skilled worker visas</a>, but this is not guaranteed.
+            We can <a href="https://www.gov.uk/government/publications/train-to-teach-in-england-non-uk-applicants/train-to-teach-in-england-non-uk-applicants#visas-and-immigration">sponsor Skilled Worker visas</a>, but this is not guaranteed.
           {% elif courseType !== "Salaried" and data["canSponsorStudentVisa"] == "true" %}
             We can <a href="https://www.gov.uk/government/publications/train-to-teach-in-england-non-uk-applicants/train-to-teach-in-england-non-uk-applicants#visas-and-immigration">sponsor Student visas</a>, but this is not guaranteed.
           {% elseif data["canSponsorSkilledWorkerVisa"] == "false" or data["canSponsorStudentVisa"] == "false" %}
