Fix missing form tag

--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -12,6 +12,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <form action="{{ course.path }}" method="post">
         <p class="govuk-body">You should give a short, factual summary of the course.</p>
         <p class="govuk-body">Tell applicants:</p>
         <ul class="govuk-list govuk-list--bullet">
