--- a/app/views/new/accredited-body.html
+++ b/app/views/new/accredited-body.html
@@ -50,8 +50,7 @@
         {{ otherAccreditedProviderFieldsHtml | safe }}
       {% endif %}
 
-      {{ change }}
-      {% if change == "true" %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
