--- a/app/views/new/applications-open.html
+++ b/app/views/new/applications-open.html
@@ -43,7 +43,7 @@
       }]
     }) }}
 
-    {% if change %}
+    {% if editing %}
       {{ govukButton({
         text: "Save and publish changes"
       }) }}
