--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -54,7 +54,7 @@
         }]
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
