--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -48,7 +48,7 @@
         }]
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
