--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -23,7 +23,7 @@
           items: items
         }) }}
 
-        {% if change %}
+        {% if editing %}
           {{ govukButton({
             text: "Save and publish changes"
           }) }}
