--- a/app/views/new/start-date.html
+++ b/app/views/new/start-date.html
@@ -64,7 +64,7 @@
         }]
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
