--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -110,6 +110,7 @@
 {% block bodyEnd %}
   </div>
   {% block scripts %}
+    {# data | log #}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
   {% endblock %}
