--- a/app/views/location/index.html
+++ b/app/views/location/index.html
@@ -2,7 +2,9 @@
 {% set title = school.name or "Add a " + ("placement school" if type == "school" else "training centre") %}
 
 {% block pageNavigation %}
-  {{ govukBreadcrumbs({
+  {{ govukBackLink({
+    href: referrer
+  }) if referrer else govukBreadcrumbs({
     items: breadcrumbItems([{
       href: "/locations",
       text: "Locations"
@@ -13,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-  <form action="/location/{{ code }}" method="post" class="govuk-grid-row">
+  <form action="/location/{{ code }}?referrer={{ referrer }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
         {{ title }}
@@ -68,9 +70,9 @@
           checked: checked(code + "-location-type", "school")
         }, {
           value: "centre",
-          text: "Centre based training location",
+          text: "centre-based training location",
           hint: {
-            text: "University or college campus or other location used for centre based training"
+            text: "University or college campus or other location used for centre-based training"
           },
           checked: checked(code + "-location-type", "centre")
         }]
