--- a/app/views/new/age-range.html
+++ b/app/views/new/age-range.html
@@ -72,7 +72,7 @@
         items: items
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
