--- a/app/views/new/apprenticeship.html
+++ b/app/views/new/apprenticeship.html
@@ -25,7 +25,7 @@
       }]
     }) }}
 
-    {% if change %}
+    {% if editing %}
       {{ govukButton({
         text: "Save and publish changes"
       }) }}
