--- a/app/views/new/full-time-part-time.html
+++ b/app/views/new/full-time-part-time.html
@@ -30,7 +30,7 @@
         }]
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
