--- a/app/views/new/funding.html
+++ b/app/views/new/funding.html
@@ -30,7 +30,7 @@
         }]
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
