--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -47,7 +47,7 @@
         }]
       }) }}
 
-      {% if change %}
+      {% if editing %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
