--- a/app/views/organisation/index.html
+++ b/app/views/organisation/index.html
@@ -56,6 +56,7 @@
 
       <p>Use this section to:</p>
       <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
+        <li>choose how to display school placement locations</li>
         <li>edit location names and addresses</li>
         <li>add locations</li>
       </ul>
