--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -108,7 +108,7 @@
   {% endif %}
 
   {% if state == 'new' or state == 'draft' %}
-    <h3 class="govuk-heading-m">Preview on a course</h3>
+    <h3 class="govuk-heading-m">Preview</h3>
     <p>This information will show on all your courses.</p>
     <p>Preview any course to see how it will look to applicants.</p>
 
