--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -17,11 +17,13 @@ $git-brand-colour: #159964;
 @import "components/course-tabs";
 @import "components/description-list";
 @import "components/header";
+@import "components/link";
 @import "components/list";
 @import "components/map";
 @import "components/phase-tag";
 @import "components/summary-list";
 @import "components/table";
+@import "components/table-container";
 @import "components/timeline";
 
 .status-box {
